[project]
name = "types-panda3d"
version = "0.3.3"
authors = [ { name = "W. M. Okiishi" } ]
description = "Type stubs for the Panda3D Python bindings"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = ["panda3d==1.10.13"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/WMOkiishi/types-panda3d"
"Bug Tracker" = "https://github.com/WMOkiishi/types-panda3d/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[tool.pycln]
all = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
extra_standard_library = ["typing_extensions"]

[tool.black]
preview = true
line_length = 130
target_version = ["py311"]
force_exclude = "/(tests|idbstubs)/"
skip_string_normalization = true
skip_magic_trailing_comma = true

[tool.mypy]
show_error_codes = true
warn_unused_ignores = true
enable_incomplete_feature = ["TypeVarTuple", "Unpack"]

[tool.pyright]
stubPath = "src"
reportSelfClsParameterName = false
# We use illusory modules to break up large modules, as well as to
# store often-used typing constructs.
reportMissingModuleSource = false
# Pmw throws Pyright off.
useLibraryCodeForTypes = false
