[project]
name = "types-panda3d"
version = "0.5.0"
authors = [ { name = "W. M. Okiishi" } ]
description = "Type stubs for the Panda3D Python bindings"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/WMOkiishi/types-panda3d"
"Bug Tracker" = "https://github.com/WMOkiishi/types-panda3d/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[tool.pycln]
all = true

[tool.isort]
profile = "black"
line_length = 130
extra_standard_library = ["typing_extensions", "_typeshed"]

[tool.black]
line-length = 130
include = '\.pyi$'
force-exclude = '^/src/panda3d-stubs/'
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.mypy]
warn_unused_ignores = true

[tool.pyright]
stubPath = "src"
reportSelfClsParameterName = false
# We use illusory modules to break up large modules, as well as to
# store often-used typing constructs.
reportMissingModuleSource = false
# Pmw throws Pyright off.
useLibraryCodeForTypes = false
